--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   flutter_swiper: ^1.1.6
   flutter_statusbar_manager: ^2.0.0
   http: ^0.12.2
+  device_preview: ^0.5.5
+  dio: ^3.0.10
+  rxdart: ^0.25.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
